# rs-plugin-service

./: .gitignore  Makefile  README.md
app/: Cargo.toml
app/src/: main.rs  main_broker.rs  main_consumer.rs  main_mp.rs  main_producer.rs  main_runner.rs  main_spawn.rs  main_spider.rs  main_wasm.rs  main_watcher.rs
lib1/: Cargo.toml
lib1/src/: lib.rs
libs/cli/src/: lib.rs
libs/color/src/: lib.rs
libs/lib1/src/: lib.rs
libs/queue/src/: lib.rs
libs/req_utils/: Cargo.toml
libs/req_utils/src/: lib.rs
libs/so_runner/: Cargo.toml
libs/so_runner/src/: lib.rs
libs/spider/: Cargo.toml
libs/spider/src/: lib.rs
libs/wasm_runner/: Cargo.toml
libs/wasm_runner/src/: lib.rs
libs/wasm_runner_manager/: Cargo.toml
libs/wasm_runner_manager/src/: lib.rs
libs/watcher/: Cargo.toml
libs/watcher/src/: lib.rs
