[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli = { "path" = "../libs/cli" }
watcher = { "path" = "../libs/watcher" }
queue = { "path" = "../libs/queue" }
req_utils = { "path" = "../libs/req_utils" }
color = { "path" = "../libs/color" }
spider = { "path" = "../libs/spider" }
wasm_runner = { "path" = "../libs/wasm_runner" }
so_runner = { "path" = "../libs/so_runner" }

[profile.release]
lto = true
debug = false
opt-level = "z"
